--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,10 @@
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
+  <div class="form-group">
+  <strong>Upload a Profile Pic:</strong>
+  <%=f.file_field :avatar %>
+  </div>
 
   <div class="form-group">
     <%= f.label :password %>
